--- a/wp-content/themes/Quantum/style.css
+++ b/wp-content/themes/Quantum/style.css
@@ -249,6 +249,7 @@ footer *:focus:not([tabindex='-1']) {
 sans-serif;
   font-family: var(--f-main);
   font-size: 16px;
+  overflow-x: hidden;
 }
 
 @media (min-width: 576px) {
